-*- text -*-

* Add an option to objdump and readelf to prevent attempts to access debuginfod
  servers when following links.
* objcopy --weaken, --weaken-symbol, and --weaken-symbols now make ELF
  STB_GNU_UNIQUE symbols weak.

Changes in 2.38:

* elfedit: Add --output-abiversion option to update ABIVERSION.

* Add support for the LoongArch instruction set.

* Tools which display symbols or strings (readelf, strings, nm, objdump)
  have a new command line option which controls how unicode characters are
  handled.  By default they are treated as normal for the tool.  Using
  --unicode=locale will display them according to the current locale.
  Using --unicode=hex will display them as hex byte values, whilst
  --unicode=escape will display them as escape sequences.  In addition
  using --unicode=highlight will display them as unicode escape sequences
  highlighted in red (if supported by the output device).

* readelf -r dumps RELR relative relocations now.

* Support for efi-app-aarch64, efi-rtdrv-aarch64 and efi-bsdrv-aarch64 has been
  added to objcopy in order to enable UEFI development using binutils.

* ar: Add --thin for creating thin archives. -T is a deprecated alias without
  diagnostics. In many ar implementations -T has a different meaning, as
  specified by X/Open System Interface.

Changes in 2.37:

* The readelf tool has a new command line option which can be used to specify
  how the numeric values of symbols are reported.  --sym-base=0|8|10|16 tells
  readelf to display the values in base 8, base 10 or base 16.  A sym base of 0
  represents the default action of displaying values under 10000 in base 10 and
  values above that in base 16.

* Binutils now requires a C99 compiler and library to build.

* A new format has been added to the nm program.  Specifying
  --format=just-symbols (or just using -j) will tell the program to only
  display symbol names and nothing else.

* A new command line --keep-section-symbols has been added to objcopy and